Make sure back links in footers work right
Before this change the back links to content from footers were making the content appear under the banner.

--- a/sass/css/post.scss
+++ b/sass/css/post.scss
@@ -91,6 +91,12 @@ article {
         }
     }
 
+    a.anchor {
+        position: relative;
+        top: -50px;
+        visibility: hidden;
+    }
+
     img {
         max-width: 100%;
         display: block;
